--- a/.github/workflows/update-readme-table.yaml
+++ b/.github/workflows/update-readme-table.yaml
@@ -39,6 +39,6 @@ jobs:
 
     - name: Create Pull Request
       run: |
-        gh pr create --base main --head update-readme --title "Update README with release table" --body "Updating README with the table of artifacts associated with the latest libraries-bom release"
+        gh pr create --base main --head update-readme --title "chore: Update README with release table" --body "Updating README with the table of artifacts associated with the latest libraries-bom release"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
