--- a/libraries-bom/pom.xml
+++ b/libraries-bom/pom.xml
@@ -59,6 +59,12 @@
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>com.google.protobuf</groupId>
+        <artifactId>protobuf-java</artifactId>
+        <version>3.25.2</version>
+        <scope>compile</scope>
+      </dependency>
       <!-- first-party-dependencies is part of google-cloud-shared-dependencies
            BOM in https://github.com/googleapis/java-shared-dependencies/blob/main/first-party-dependencies/pom.xml.
            This includes Guava, Protobuf, gRPC, Google Auth Libraries, etc. -->
