--- a/.kokoro/presubmit/integration2.cfg
+++ b/.kokoro/presubmit/integration2.cfg
@@ -17,5 +17,5 @@ env_vars: {
 }
 
 container_properties {
-  docker_image: "gcr.io/cloud-devrel-public-resources/java8"
+  docker_image: "gcr.io/cloud-devrel-public-resources/java8:latest"
 }
