use artifact registry image

--- a/.kokoro/presubmit/integration2.cfg
+++ b/.kokoro/presubmit/integration2.cfg
@@ -17,5 +17,5 @@ env_vars: {
 }
 
 container_properties {
-  docker_image: "gcr.io/cloud-devrel-public-resources/java8:latest"
+  docker_image: "us-central1-docker.pkg.dev/chingor-test/testing-images/java11:latest"
 }
