directly run the build script

--- a/.kokoro/presubmit/integration2.cfg
+++ b/.kokoro/presubmit/integration2.cfg
@@ -1,5 +1,8 @@
 # Format: //devtools/kokoro/config/proto/build.proto
 
+# Use the trampoline script to run in docker.
+build_file: "java-cloud-bom/.kokoro/build.sh"
+
 env_vars: {
   key: "JOB_TYPE"
   value: "test"
