--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
     <!-- Only modules to be published to Maven Central. No tests or release note generation. -->
     <module>google-cloud-bom</module>
     <module>libraries-bom</module>
+    <module>libraries-bom-protobuf3</module>
   </modules>
 
   <build>
