--- a/libraries-bom-protobuf3/pom.xml
+++ b/libraries-bom-protobuf3/pom.xml
@@ -7,6 +7,13 @@
   <version>0.0.1-SNAPSHOT</version><!-- {x-version-update:libraries-bom-protobuf3:current} -->
   <packaging>pom</packaging>
 
+  <parent>
+    <groupId>com.google.cloud</groupId>
+    <artifactId>libraries-bom</artifactId>
+    <version>26.48.0-SNAPSHOT</version><!-- {x-version-update:libraries-bom:current} -->
+    <relativePath>../libraries-bom</relativePath>
+  </parent>
+
   <name>Google Cloud Platform Supported Libraries Protobuf3</name>
   <description>
     A compatible set of Google Cloud open source libraries. This bom is compatible with protobuf-java 3.x versions.
@@ -24,28 +31,6 @@
     </developer>
   </developers>
 
-  <issueManagement>
-    <url>https://github.com/googleapis/java-cloud-bom/issues</url>
-  </issueManagement>
-  <scm>
-    <connection>scm:git:git@github.com:googleapis/java-cloud-bom.git</connection>
-    <developerConnection>scm:git:git@github.com:googleapis/java-cloud-bom.git
-    </developerConnection>
-    <url>https://github.com/googleapis/java-cloud-bom</url>
-    <tag>HEAD</tag>
-  </scm>
-
-  <licenses>
-    <license>
-      <name>The Apache License, Version 2.0</name>
-      <url>https://raw.githubusercontent.com/googleapis/google-cloud-java/main/LICENSE</url>
-    </license>
-  </licenses>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-
   <distributionManagement>
     <snapshotRepository>
       <id>sonatype-nexus-snapshots</id>
@@ -59,52 +44,16 @@
 
   <dependencyManagement>
     <dependencies>
-      <!-- first-party-dependencies is part of java-shared-dependencies
-           BOM in https://github.com/googleapis/sdk-platform-java/blob/main/java-shared-dependencies/first-party-dependencies/pom.xml.
-           This includes Guava, Protobuf, gRPC, Google Auth Libraries, etc. -->
       <dependency>
-        <groupId>com.google.cloud</groupId>
-        <artifactId>first-party-dependencies</artifactId>
-        <version>3.35.0</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-
-      <!-- google-cloud-java from https://github.com/googleapis/java-cloud-bom -->
-      <dependency>
-        <groupId>com.google.cloud</groupId>
-        <artifactId>google-cloud-bom</artifactId>
-        <version>0.229.0-SNAPSHOT</version><!-- {x-version-update:google-cloud-bom:current} -->
+        <groupId>com.google.protobuf</groupId>
+        <artifactId>protobuf-bom</artifactId>
+        <version>3.25.5</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.sonatype.plugins</groupId>
-        <artifactId>nexus-staging-maven-plugin</artifactId>
-        <version>1.7.0</version>
-        <extensions>true</extensions>
-        <configuration>
-          <serverId>sonatype-nexus-staging</serverId>
-          <nexusUrl>https://google.oss.sonatype.org/</nexusUrl>
-          <autoReleaseAfterClose>false</autoReleaseAfterClose>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>flatten-maven-plugin</artifactId>
-        <configuration>
-          <pomElements>
-            <dependencyManagement>expand</dependencyManagement>
-          </pomElements>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
   <profiles>
     <profile>
       <id>release</id>
