--- a/libraries-bom-protobuf3/pom.xml
+++ b/libraries-bom-protobuf3/pom.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <!-- adding comment for testing-->
   <groupId>com.google.cloud</groupId>
   <artifactId>libraries-bom-protobuf3</artifactId>
   <version>0.0.1-SNAPSHOT</version><!-- {x-version-update:libraries-bom-protobuf3:current} -->
@@ -16,7 +15,7 @@
 
   <name>Google Cloud Platform Supported Libraries Protobuf3</name>
   <description>
-    A compatible set of Google Cloud open source libraries. This bom is compatible with protobuf-java 3.x versions.
+    A compatible set of Google Cloud open source libraries. This BOM is compatible with protobuf-java 3.x versions.
     Document: https://cloud.google.com/java/docs/bom
   </description>
   <url>https://cloud.google.com/java/docs/bom</url>
