chore: Override the version of protobuf-bom to 4.28.3 in libraries-bom.

--- a/renovate.json
+++ b/renovate.json
@@ -69,6 +69,12 @@
         "^com.fasterxml.jackson.core"
       ],
       "groupName": "jackson dependencies"
+    },
+    {
+      "matchPackagePatterns": [
+        "^com.google.protobuf:"
+      ],
+      "enabled": false
     }
   ],
   "semanticCommits": "enabled",
