--- a/libraries-bom/pom.xml
+++ b/libraries-bom/pom.xml
@@ -59,6 +59,17 @@
 
   <dependencyManagement>
     <dependencies>
+      <!-- This section overrides the protobuf version specified in first-party-dependencies. This is to provide customers a bom that includes protobuf-java 4.x.
+      We will upgrade protobuf-bom in first-party-dependencies once we feel comfortable that most customers would not have conflict with protobuf-java 4.x.
+      This section has to be specified before first-party-dependencies, please do not move it. -->
+      <dependency>
+        <groupId>com.google.protobuf</groupId>
+        <artifactId>protobuf-bom</artifactId>
+        <version>4.28.3</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+
       <!-- first-party-dependencies is part of java-shared-dependencies
            BOM in https://github.com/googleapis/sdk-platform-java/blob/main/java-shared-dependencies/first-party-dependencies/pom.xml.
            This includes Guava, Protobuf, gRPC, Google Auth Libraries, etc. -->
