--- a/libraries-bom-protobuf3/pom.xml
+++ b/libraries-bom-protobuf3/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.google.cloud</groupId>
   <artifactId>libraries-bom-protobuf3</artifactId>
-  <version>0.2.0-SNAPSHOT</version><!-- {x-version-update:libraries-bom-protobuf3:current} -->
+  <version>26.50.0-SNAPSHOT</version><!-- {x-version-update:libraries-bom:current} -->
   <packaging>pom</packaging>
 
   <parent>
